--- a/Style.css
+++ b/Style.css
@@ -25,13 +25,13 @@ header {
     align-items: center;*/
     top: 0;
     left: 0;
-    height: 50px;
+    height: 70px;
     display: flex;
     background-color: #FDF0EA;
 }
 
 .logo {
-    padding: 10px;
+    padding: 20px;
 
 }
 
@@ -47,15 +47,78 @@ header {
 
 span a {
     padding: 10px;
+    font-weight: 100;
 }
 
 button {
-    background-color: rgb(255, 128, 0);
+    background-color: rgb(255, 111, 0);
+    color: whitesmoke;
+    border-color: transparent;
 }
 
 .login-button {
     width: 70px;
-    height: 30px;
-    color: white;
-    border-color: transparent;
+    height: 33px;
+
+}
+
+.ExpPlus-button {
+    width: 120px;
+    height: 35px;
+    font-size: medium;
+}
+
+/* header --------------------------------------------------*/
+
+.topSection {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 15px;
+}
+
+.headline {
+
+    font-weight: bolder;
+    font-size: 300%;
+    width: 480px;
+    height: 180px;
+    padding-top: 50px;
+    word-spacing: 8px;
+
+}
+
+.headlineparagraph {
+    width: 450px;
+    font-size: 76%;
+    padding-bottom: 10px;
+    line-height: 25px;
+    font-weight: 600;
+
+
+}
+
+/* TOP SECTION --------------------------------------------------*/
+
+.bottomSection {
+    width: 900px;
+    margin: auto;
+    height: 250px;
+}
+
+.qualities {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#minipic {
+    background-color: rebeccapurple;
+    height: 35px;
+    width: 35px;
+}
+#qualitiestitle{
+}
+#qualitiesparagraph{
+    width: 200px;
 }
